third_party/move/move-compiler-v2/tests/unit_test/notest/test_filter_function.exp

Diagnostics:
error: no function named `bar` found
  ┌─ tests/unit_test/notest/test_filter_function.move:6:24
  │
6 │     public fun foo() { bar() }
  │                        ^^^^^
